--- a/client/calculation_form_template.html
+++ b/client/calculation_form_template.html
@@ -12,11 +12,14 @@
             </div>
 
             <div class='col-md-7'>
-                <h3>Drugs In Compounded Lot <span class="lot"></span></h3>
+                <h3>Schedule II-V Drugs In Compounded Lot <span class="lot"></span></h3>
                 <table class="table table-condensed log-preview-table">
                     <tbody>
                         <tr class="table-striped header"><th>#</th><th>Drug</th><th>NDC</th><th>Amount</th><th>Units</th></tr>
                         <!-- each goes here -->
+                        
+                        
+
                         <tr class="table-striped"><td class="drug-number 1">1</td><td class="name">Bromide</td><td class="NDC">9293423423</td><td class="amount-disposed">30</td><td class="units">mg</td></tr>
                         <tr class="table-striped"><td class="drug-number 2">2</td><td class="name">Larsene</td><td class="NDC">4o234392o34</td><td class="amount-disposed">100</td><td class="units">mL</td></tr>
                         <tr class="table-striped"><td class="drug-number 3">3</td><td class="name">Actinate</td><td class="NDC">9293423423</td><td class="amount-disposed">1</td><td class="units">kg</td></tr>
