--- a/client/log_item_temlate.html
+++ b/client/log_item_temlate.html
@@ -4,7 +4,7 @@
         <td class="drug">{{drug_name}}</td>
         <td class="ndc">{{NDC}}</td>
         <td class="quantity">{{quantity}} {{units}}</td>
-        <td class="initials">TM</td>
+        <td class="initials">{{initials}}</td>
         <td class="reason">{{reason_expired}}</td>
     </tr>
 </template>
