--- a/client/log_template.html
+++ b/client/log_template.html
@@ -11,6 +11,10 @@
         <div class="col-md-2">
             {{> lotLookupFormTemplate}}
         </div>
+        <div class="col-md-6">
+            <h3>Lot #: _____</h3>
+            <p>NDC: ______________</p>
+        </div>
     </div>
     <div class="row">
         <div class="col-md-3">
